<?xml version="1.0"?>
<package format="2">
  <name>lidar_slam</name>
  <version>0.0.0</version>
  <description>The lidar_slam package</description>

  <maintainer email="debeunnecesar@gmail.com">César Debeunne</maintainer>
  <license>PRIVATE</license>
  <author> César Debeunne </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

</package>
